<resources>
  <string name="app_name">MyFavMovies</string>
  <string name="last_pushed">Last Pushed %s</string>

  <string name="error_string">Oops.. It seems we have a temporary problem</string>
  <string name="movie_title">Movie title</string>
  <string name="no_connention">No interner connection!</string>
  <string name="no_movie_error">Sorry, No movie found</string>
  <string name="sort_by">Sort by</string>
  <string name="sort_by_popular">Show most popular</string>
  <string name="sort_by_rated">Show top rated</string>
  <string name="release_date">Release:</string>
  <string name="rating">Rating:</string>
  <string name="sort_by_favourite">Sort by favourite</string>
  <string name="app_hash_tag">#MyFavMovies</string>
    <string name="action_favorite">Favourite</string>
    <string name="movie_image_description">Movie Image</string>
    <string name="reviews_label">Reviews</string>
  <string name="videos_label">Reviews</string>
  <string name="movie_rating">Rating:</string>
  <string name="movie_release_data">Movie release date</string>
  <string name="movie_reviews">Movie reviews</string>
    <string name="movie_long_title">A very long title just for testing A very long title just for testing</string>
    <string name="show_reviews">Reviews</string>
    <string name="show_videos">Videos</string>

</resources>
