<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster_detail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image_description"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher"
            android:layout_marginLeft="16dp" />

        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:id="@+id/favourite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_poster_detail"
            app:layout_constraintRight_toRightOf="@+id/movie_poster_detail"
            app:mfb_color="black"
            app:mfb_size="64"
            app:mfb_type="star" />

        <TextView
            android:id="@+id/movie_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:maxLines="5"
            android:maxWidth="120dp"
            android:paddingTop="@dimen/large_detail_padding"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/detail_largest_text"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster_detail"
            app:layout_constraintTop_toTopOf="@+id/movie_poster_detail"
            tools:text="@string/movie_long_title" />

        <TextView
            android:id="@+id/movie_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/movie_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/detail_label_text"
            android:visibility="visible"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/movie_title_detail" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/detail_large_text"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster_detail"
            app:layout_constraintTop_toTopOf="@+id/movie_rating_label"
            tools:text="@string/movie_rating" />

        <TextView
            android:id="@+id/release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/release_date"
            android:textColor="@color/white"
            android:textSize="@dimen/detail_label_text"
            android:visibility="visible"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating" />

        <TextView
            android:id="@+id/release_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="@dimen/detail_large_text"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/release_date_label"
            tools:text="@string/movie_release_data" />


        <TextView
            android:id="@+id/movie_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/small_margin"
            android:textColor="@android:color/black"
            android:textSize="@dimen/detail_title_text"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_detail"
            tools:text="@string/movie_title"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginRight="8dp" />

        <Button
            android:id="@+id/show_reviews_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:text="@string/show_reviews"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_synopsis" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/detail_reviews_grid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_reviews_btn" />

        <View
            android:id="@+id/division_view"
            style="@style/DivisionView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/detail_reviews_grid" />

        <Button
            android:id="@+id/show_videos_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:text="@string/show_videos"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_reviews_grid" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/detail_videos_grid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_videos_btn" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
